==> klaus-liebler/sensact/firmware/modules/drivers/ds2482.cpp <==
#include "common.h"
#include "ds2482.h"
#define ADDR				(uint16_t)(this->DEVICE_ADDRESS_BASE+(uint16_t)this->device)
#define POLL_LIMIT  200
#define POLL_TIMEOUT UINT8_MAX
#define TIMEOUT 100
#define CMD_DRST   0xF0
#define CMD_WCFG   0xD2
#define CMD_CHSL   0xC3
#define CMD_SRP    0xE1
#define CMD_1WRS   0xB4
#define CMD_1WWB   0xA5
#define CMD_1WRB   0x96
#define CMD_1WSB   0x87
#define CMD_1WT    0x78
#define CONFIG_APU  0x01
#define CONFIG_PPM  0x02
#define CONFIG_SPU  0x04
#define CONFIG_1WS  0x08
#define STATUS_1WB  0x01
#define STATUS_PPD  0x02
#define STATUS_SD   0x04
#define STATUS_LL   0x08
#define STATUS_RST  0x10
#define STATUS_SBR  0x20
#define STATUS_TSB  0x40
#define STATUS_DIR  0x80

bool cDS2482::OWReset(void) {
	// 1-Wire reset (Case B)
	//   S AD,0 [A] 1WRS [A] Sr AD,1 [A] [Status] A [Status] A\ P
	//                                   \--------/
	//                       Repeat until 1WB bit has changed to 0
	//  [] indicates from slave
	uint8_t cmd = CMD_1WRS;
	HAL_I2C_Master_Transmit(i2c, ADDR, &cmd, 1, TIMEOUT);

	uint8_t status = pollStatus();
	// check for short condition
	if (status & STATUS_SD)
		short_detected = true;
	else
		short_detected = false;

	// check for presence detect
	if (status & STATUS_PPD)
		return true;
	else
		return false;
}

bool cDS2482::OWTouchBit(bool sendbit) {
	// 1-Wire bit (Case B)
	//   S AD,0 [A] 1WSB [A] BB [A] Sr AD,1 [A] [Status] A [Status] A\ P
	//                                          \--------/
	//                           Repeat until 1WB bit has changed to 0
	//  [] indicates from slave
	//  BB indicates byte containing bit value in msbit

	uint8_t cmd[2] = { CMD_1WSB, sendbit ? (uint8_t)0x80 : (uint8_t)0x00 };
	HAL_I2C_Master_Transmit(i2c, ADDR, cmd, 2, TIMEOUT);

	uint8_t status = pollStatus();

	// return bit state
	if (status & STATUS_SBR)
		return true;
	else
		return false;
}

void cDS2482::OWWriteByte(uint8_t sendbyte) {

	// 1-Wire Write Byte (Case B)
	//   S AD,0 [A] 1WWB [A] DD [A] Sr AD,1 [A] [Status] A [Status] A\ P
	//                                          \--------/
	//                             Repeat until 1WB bit has changed to 0
	//  [] indicates from slave
	//  DD data to write

	uint8_t cmd[2] = { CMD_1WWB, sendbyte };
	HAL_I2C_Master_Transmit(i2c, ADDR, cmd, 2, TIMEOUT);
	pollStatus();
}

uint8_t cDS2482::OWReadByte(void) {
	uint8_t data;
/*
	 1-Wire Read Bytes (Case C)
	   S AD,0 [A] 1WRB [A] Sr AD,1 [A] [Status] A [Status] A\
	                                   \--------/
	                     Repeat until 1WB bit has changed to 0
	   Sr AD,0 [A] SRP [A] E1 [A] Sr AD,1 [A] DD A\ P

	  [] indicates from slave
	  DD data read
*/
	uint8_t cmd = CMD_1WRB;
	HAL_I2C_Master_Transmit(i2c, ADDR, &cmd, 1, TIMEOUT);
	pollStatus();
	uint16_t pseudoAddress = (CMD_SRP << 8) | 0xE1;
	HAL_I2C_Mem_Read(i2c, ADDR, pseudoAddress, I2C_MEMADD_SIZE_16BIT, &data, 1,
			TIMEOUT);
	return data;
}

bool cDS2482::OWSearch(bool alarmOnly) {
	int id_bit_number;
	int last_zero, rom_byte_number, search_result;
	int id_bit, cmp_id_bit;
	uint8_t rom_byte_mask, search_direction, status;

	// initialize for search
	id_bit_number = 1;
	last_zero = 0;
	rom_byte_number = 0;
	rom_byte_mask = 1;
	search_result = false;
	uint8_t crc8 = 0;

	// if the last call was not the last one
	if (!LastDeviceFlag) {
		// 1-Wire reset
		if (!OWReset()) {
			// reset the search
			LastDiscrepancy = 0;
			LastDeviceFlag = false;
			LastFamilyDiscrepancy = 0;
			return false;
		}

		// issue the search command
		if(alarmOnly)
		{
			OWWriteByte(0xEC);
		}
		else
		{
			OWWriteByte(0xF0);
		}


		// loop to do the search
		do {
			// if this discrepancy if before the Last Discrepancy
			// on a previous next then pick the same as last time
			if (id_bit_number < LastDiscrepancy) {
				if ((ROM_NO[rom_byte_number] & rom_byte_mask) > 0)
					search_direction = 1;
				else
					search_direction = 0;
			} else {
				// if equal to last pick 1, if not then pick 0
				if (id_bit_number == LastDiscrepancy)
					search_direction = 1;
				else
					search_direction = 0;
			}

			// Perform a triple operation on the DS2482 which will perform 2 read bits and 1 write bit
			status = searchTriplet(search_direction);

			// check bit results in status byte
			id_bit = ((status & STATUS_SBR) == STATUS_SBR);
			cmp_id_bit = ((status & STATUS_TSB) == STATUS_TSB);
			search_direction =
					((status & STATUS_DIR) == STATUS_DIR) ?
							(uint8_t) 1 : (uint8_t) 0;

			// check for no devices on 1-Wire
			if ((id_bit) &&(cmp_id_bit))
				break;
			else {
				if ((!id_bit) && (!cmp_id_bit) && (search_direction == 0)) {
					last_zero = id_bit_number;

					// check for Last discrepancy in family
					if (last_zero < 9)
						LastFamilyDiscrepancy = last_zero;
				}

				// set or clear the bit in the ROM byte rom_byte_number
				// with mask rom_byte_mask
				if (search_direction == 1)
					ROM_NO[rom_byte_number] |= rom_byte_mask;
				else
					ROM_NO[rom_byte_number] &= (uint8_t) ~rom_byte_mask;

				// increment the byte counter id_bit_number
				// and shift the mask rom_byte_mask
				id_bit_number++;
				rom_byte_mask <<= 1;

				// if the mask is 0 then go to new SerialNum byte rom_byte_number and reset mask
				if (rom_byte_mask == 0) {
					calcCrc8(ROM_NO[rom_byte_number], &crc8);  // accumulate the CRC
					rom_byte_number++;
					rom_byte_mask = 1;
				}
			}
		} while (rom_byte_number < 8);  // loop until through all ROM bytes 0-7

		// if the search was successful then
		if (!((id_bit_number < 65) || (crc8 != 0))) {
			// search successful so set LastDiscrepancy,LastDeviceFlag,search_result
			LastDiscrepancy = last_zero;

			// check for last device
			if (LastDiscrepancy == 0)
				LastDeviceFlag = true;

			search_result = true;
		}
	}

	// if no device found then reset counters so next 'search' will be like a first
	if (!search_result || (ROM_NO[0] == 0)) {
		LastDiscrepancy = 0;
		LastDeviceFlag = false;
		LastFamilyDiscrepancy = 0;
		search_result = false;
	}

	return search_result;
}

void cDS2482::calcCrc8(uint8_t data, uint8_t *crc) {
	int i;

	// See Application Note 27
	*crc = *crc ^ data;
	for (i = 0; i < 8; ++i) {
		if (*crc & 1)
			*crc = (*crc >> 1) ^ 0x8c;
		else
			*crc = (*crc >> 1);
	}
	return;
}

uint8_t cDS2482::OWLevel(uint8_t new_level) {
	// function only will turn back to non-strong pull-up
	if (new_level != MODE_STANDARD)
		return MODE_STRONG;

	// clear the strong pull-up bit in the global config state
	cSPU = false;

	// write the new config
	writeConfig(c1WS | cSPU | cPPM | cAPU);

	return MODE_STANDARD;
}

bool cDS2482::OWWriteBytePower(uint8_t sendbyte) {
	// set strong pull-up enable
	cSPU = CONFIG_SPU;

	// write the new config
	if (!writeConfig(c1WS | cSPU | cPPM | cAPU))
		return false;

	// perform write byte
	OWWriteByte(sendbyte);

	return true;
}

bool cDS2482::OWReadBitPower(bool applyPowerResponse) {
	unsigned char rdbit;

	// set strong pull-up enable
	cSPU = CONFIG_SPU;

	// write the new config
	if (!writeConfig(c1WS | cSPU | cPPM | cAPU))
		return false;

	// perform read bit
	rdbit = OWReadBit();

	// check if response was correct, if not then turn off strong pull-up
	if (rdbit != applyPowerResponse) {
		OWLevel(MODE_STANDARD);
		return false;
	}

	return true;
}
